--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,12 +5,23 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
 
-    <view
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        class="co.kuntz.poverty.views.ItemView"
-        android:id="@+id/item_view"
+    <ListView
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:id="@+id/list_items"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
+
+    <view
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        class="com.melnykov.fab.FloatingActionButton"
+        android:id="@+id/action_button"
+        android:layout_alignBottom="@+id/list_items"
+        android:layout_alignRight="@+id/list_items"
+        android:layout_alignEnd="@+id/list_items"
+        android:src="@drawable/ic_action_new"
+        />
+
 </RelativeLayout>
